--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <h3>Certificates</h3>
                     <ul>
                         <li><a href="https://coursera.org/share/f33615d5359e7b508f9101f2250f6ab9" target="_blank">IBM Cybersecurity Analyst</a></li>
-                        <li>CompTIA Security+ (in progress)</li>
+                        <li>CompTIA A+ (in progress)</li>
                     </ul>
 
                 </div>
