--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id= "topLeft">
                     <h1>Shahram Mokhtari</h1>
                     <p>Parts Tester&nbsp; &#9826; &nbsp;February 2021 - Present</p>
-                    <p>Freelance IT Tech&nbsp; &#9826; &nbsp;7+ years experience</p>
+                    <p>IT Technician I&nbsp; &#9826; &nbsp;Nov 2021 - Present</p>
                 </div>
                 <!-- Top right section -->
                 <div id= "topRight">
